[metadata]
name = 'twitter-scraping'
version = '0.0.1'
description = ''
author = 'Philip Blair'
author_email = 'philip@pblair.org'
license = 'MIT/Apache-2.0'
url = 'https://github.com/belph/twitter-scraping'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
